--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,12 @@ body {
   background-size: contain;
   background-position: right;
   margin-top: 50px;
-  z-index: 1;
 }
 
 .container {
   width: 85%;
   max-width: 1200px;
   margin: 0 auto;
-  z-index: 100;
   background-color: transparent;
 }
 
@@ -33,6 +31,7 @@ body {
   font-weight: 600;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   
 }
 
@@ -107,7 +106,7 @@ h4 {
 
 .list {
   width: 90%;
-  margin-bottom: 24px;
+  margin-bottom: 26px;
 }
 
 ul {
@@ -158,4 +157,67 @@ ul {
 
 .task-title--done {
   text-decoration: line-through;
+}
+
+@media(max-width: 1210px) {
+  .list-item, .empty-list-item {
+    width: 95%;
+  }
+}
+
+@media(max-width: 1000px) {
+  .list-item, .empty-list-item {
+    width: 94%;
+  }
+}
+
+@media(max-width: 540px) {
+  .song {
+    font-size: 16px;
+    justify-content: space-around;
+  }
+
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    background-color: rgba(240, 240, 240, 0.75);
+    margin-bottom: 50px;
+  }
+
+  h4 {
+    font-family: 20px;
+  }
+
+  .bg {
+    margin-top: 20px;
+  }
+
+  .list, .card {
+    width: 100%;
+  }
+
+  .list ul {
+    width: 95%;
+    margin-left: -45px;
+  }
+
+  .card-header {
+    font-size: 16px;
+  }
+
+  .card-body {
+    padding: 20px 20px;
+  }
+
+  .form-control {
+    width: 94%;
+    padding: 10px 6px;
+    font-size: 17px;
+    line-height: 1;
+  }
+
+  .add-btn {
+    width: 100%;
+  }
+
 }
