--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,10 @@ ul {
 }
 
 @media(max-width: 540px) {
+  .list-item {
+    font-size: 14px;
+  }
+
   .song {
     font-size: 16px;
     justify-content: space-around;
